<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textSize="16sp"
                android:layout_marginBottom="16sp"
                android:textStyle="bold"
                android:textColor="#2d2d2d"
                android:gravity="center_horizontal"
                android:text="@string/configuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:textColor="#454545"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/seekBar"
                android:max="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:textColor="#454545"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/seekBar2"
                android:max="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:textColor="#454545"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/seekBar3"
                android:max="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:textColor="#454545"
                android:text="@string/seleccion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:background="#eaeaea"
                android:padding="5dp"
                android:layout_margin="15dp"
                android:id="@+id/radioGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/colores"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numeros"/>

            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:textColor="#454545"
                android:text="@string/seleccion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:padding="5dp"
                android:background="#eaeaea"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sonido"/>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vibracion"/>

            </LinearLayout>

            <Button
                android:layout_margin="10dp"
                android:background="@drawable/boton_verde1"
                android:textColor="#ffffff"
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/boton_jugar"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>